fix align

--- a/publish.css
+++ b/publish.css
@@ -61,6 +61,7 @@ html {
   left: 0;
   right: 0;
   bottom: 0;
+  width : 116;
 }
 
 #body_frame {
@@ -77,7 +78,6 @@ html {
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  width: 116px;
 }
 
 #navigate_menu {
